--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 <body> 
 <h1> HELLO WORLD </h1> 
 <p> El Peluca sape </p> 
-
+  
+<h1> MI primer lista ordenada </h1>  
+<ol> 
+  <li> Jhon Salchichon Rambo </li> 
+  <li> El Peluca </li> 
+  <li> Harry el Sucio Potter </li>
+  <li> El Colorado </li> 
+  </ol>
+  </body> 
 </html>
