--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
 <h1> HELLO WORLD </h1> 
 <p> El Peluca sape </p> 
   
-<h1> MI primer lista ordenada </h1>  
+<h1> Mi primer lista ordenada </h1>  
 <ol> 
   <li> Jhon Salchichon Rambo </li> 
   <li> El Peluca </li> 
   <li> Harry el Sucio Potter </li>
   <li> El Colorado </li> 
   </ol>
+  
+  <h1> Mi primera lista desordenada </h1> 
+ <ul>
+   <li> El Mesias tropical </li> 
+   <li> Se lo que hiciste el sexenio pasado </li> 
+   <li> Me lo dijo Adela </li>
+   <li> El copetes </li>  
+  </ul>   
   </body> 
 </html>
