--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
    <li> Me lo dijo Adela </li>
    <li> El copetes </li>  
   </ul>   
+  
+  <h1> Mi primera lista de definiciones </h1> 
+  <dl>
+    <dt> Black Magic </dt>
+    <dd> Elemental aether taken from nature to create destructive spells </dd> 
+    <dt> White Magic </dt> 
+    <dd> Elementak aether taken from nature to create restorative effects </dd>
+    <dt> Red Magic </dt> 
+    <dd> Comsumpion from own aether to create either black or white magic aether alterations </dd> 
+    <dt> Blue Magic </dt> 
+    <dd> Aether adapted from external aether exposition into self creatig mimickry of other aether iterations </dd> 
+  </dl>
   </body> 
 </html>
