--- a/index.html
+++ b/index.html
@@ -33,5 +33,13 @@
     <dt> Blue Magic </dt> 
     <dd> Aether adapted from external aether exposition into self creatig mimickry of other aether iterations </dd> 
   </dl>
+  
+  <table>
+    <tr><th> Nombre </th> <th> Apellido </th> puntaje </th></tr>
+  <tr><th> Hermenegildo </th> Lopez </th><th> 50 </th></tr>
+<tr><th> Espiridion </th> Sanchez </th><th> 75 </th></tr>
+<tr><th> Filiberto </th> Perez </th><th> 92 </th></tr> 
+<tr><th> Leopoldo </th> Yañez </th><th> 33 </th></tr>
+</table> 
   </body> 
 </html>
