--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   </dl>
   
   <table>
-    <tr><th> Nombre </th> <th> Apellido </th> puntaje </th></tr>
-  <tr><th> Hermenegildo </th> Lopez </th><th> 50 </th></tr>
-<tr><th> Espiridion </th> Sanchez </th><th> 75 </th></tr>
-<tr><th> Filiberto </th> Perez </th><th> 92 </th></tr> 
-<tr><th> Leopoldo </th> Yañez </th><th> 33 </th></tr>
+    <tr><th> Nombre </th> <th> Apellido </th><th> puntaje </th></tr>
+  <tr><th> Hermenegildo </th> <th> Lopez </th><th> 50 </th></tr>
+<tr><th> Espiridion </th> <th> Sanchez </th><th> 75 </th></tr>
+<tr><th> Filiberto </th> <th> Perez </th><th> 92 </th></tr> 
+<tr><th> Leopoldo </th> <th> Yañez </th><th> 33 </th></tr>
 </table> 
   </body> 
 </html>
