--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <dd> Aether adapted from external aether exposition into self creatig mimickry of other aether iterations </dd> 
   </dl>
   
-  <table border="1">
-    <tr><th> Nombre </th> <th> Apellido </th><th> puntaje </th></tr>
+  <table border="1" style=width: "35%">
+    <tr><th> Nombre </th> <th> Apellido </th><th> Puntaje </th></tr>
   <tr><th> Hermenegildo </th> <th> Lopez </th><th> 50 </th></tr>
 <tr><th> Espiridion </th> <th> Sanchez </th><th> 75 </th></tr>
 <tr><th> Filiberto </th> <th> Perez </th><th> 92 </th></tr> 
